--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -1,3 +1,46 @@
+body {
+    background-image: linear-gradient(124deg, #27336e 0%, #8478f8 100%);
+}
+main {
+    width: 74.4rem;
+    margin: 2.8rem auto;
+    box-shadow: 0 0 .8rem rgba(1, 1, 1, 0.5);
+    border-radius: 2.4rem;
+    -webkit-border-radius: 2.4rem;
+    -moz-border-radius: 2.4rem;
+    -ms-border-radius: 2.4rem;
+    -o-border-radius: 2.4rem;
+    overflow: hidden;
+}
+.intro {
+    background-image: none;
+}
+.navbar__head {
+    width: 84rem;
+    justify-content: space-between;
+    margin-left: calc(50% - 42rem);
+}
+.navbar__toggle-button {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+}
+.navbar__menu {
+    background-color: transparent;
+    right: auto;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    width: auto;
+    box-shadow: none;
+}
+.navbar__menu--list {
+    display: flex;
+    flex-direction: row;
+}
+.navbar__menu--list-item {
+    margin: 0.4rem 1.4rem;
+}
 .about {
     height: 43rem;
     position: relative;
