--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -22,6 +22,19 @@ html {
     background-image: linear-gradient(160deg, #27336e 0%, #8478f8 100%);
 }
 
+main {
+    width: 100vw;
+    max-width: 74.4rem;
+    margin: 2.8rem auto 0;
+    box-shadow: 0 0 .8rem rgba(1, 1, 1, 0.5);
+    border-radius: 2.4rem;
+    -webkit-border-radius: 2.4rem;
+    -moz-border-radius: 2.4rem;
+    -ms-border-radius: 2.4rem;
+    -o-border-radius: 2.4rem;
+    overflow: hidden;
+}
+
 a {
     color: var(--white);
 }
