--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -26,7 +26,7 @@ main {
     width: 100vw;
     max-width: 74.4rem;
     margin: 2.8rem auto 0;
-    box-shadow: 0 0 2rem rgba(115, 251, 211, 0.5);
+    box-shadow: 0 0 .8rem rgba(1, 1, 1, 0.5);
     border-radius: 2.4rem;
     -webkit-border-radius: 2.4rem;
     -moz-border-radius: 2.4rem;
